# todo

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  pyproject.toml  requirements.txt  todo.db
backend/src/: auth.py  config.py  database.py  main.py  schemas.py  security.py
backend/src/models/: __init__.py  project.py  tag.py  todo.py  user.py
backend/src/routers/: __init__.py  auth.py  projects.py  tags.py  todos.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: login-form.tsx  register-form.tsx
frontend/src/components/projects/: project-form.tsx  project-list.tsx
frontend/src/components/tags/: tag-manager.tsx
frontend/src/components/todos/: todo-form.tsx  todo-list.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/api/: auth.ts  axios.ts  projects.ts  tags.ts  todos.ts
frontend/src/pages/: home-page.tsx  login-page.tsx  project-detail-page.tsx  project-form-page.tsx  register-page.tsx  settings-page.tsx
